# game.libretro

./: .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  Readme.md  Schema.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: sync-addon-metadata-translations.yml
cmake/: FindLibretroCommon.cmake  FindRcheevos.cmake  FindTinyXML.cmake
debian/: changelog.in  control  copyright  rules
depends/common/enet/: huff0.txt
depends/common/libretro-common/: CMakeLists.txt  libretro-common.sha256  libretro-common.txt
depends/common/rcheevos/: CMakeLists.txt  rcheevos.sha256  rcheevos.txt
game.library.libretro/: addon.xml
game.libretro/: addon.xml  addon.xml.in
game.libretro/resources/: settings.xml
game.libretro/resources/language/resource.language.af_za/: strings.po
game.libretro/resources/language/resource.language.am_et/: strings.po
game.libretro/resources/language/resource.language.ar_dz/: strings.po
game.libretro/resources/language/resource.language.ar_sa/: strings.po
game.libretro/resources/language/resource.language.ast_es/: strings.po
game.libretro/resources/language/resource.language.az_az/: strings.po
game.libretro/resources/language/resource.language.be_by/: strings.po
game.libretro/resources/language/resource.language.bg_bg/: strings.po
game.libretro/resources/language/resource.language.bs_ba/: strings.po
game.libretro/resources/language/resource.language.ca_es/: strings.po
game.libretro/resources/language/resource.language.cs_cz/: strings.po
game.libretro/resources/language/resource.language.cy_gb/: strings.po
game.libretro/resources/language/resource.language.da_dk/: strings.po
game.libretro/resources/language/resource.language.de_de/: strings.po
game.libretro/resources/language/resource.language.el_gr/: strings.po
game.libretro/resources/language/resource.language.en_au/: strings.po
game.libretro/resources/language/resource.language.en_gb/: strings.po
game.libretro/resources/language/resource.language.en_nz/: strings.po
game.libretro/resources/language/resource.language.en_us/: strings.po
game.libretro/resources/language/resource.language.eo/: strings.po
game.libretro/resources/language/resource.language.es_ar/: strings.po
game.libretro/resources/language/resource.language.es_es/: strings.po
game.libretro/resources/language/resource.language.es_mx/: strings.po
game.libretro/resources/language/resource.language.et_ee/: strings.po
game.libretro/resources/language/resource.language.eu_es/: strings.po
game.libretro/resources/language/resource.language.fa_af/: strings.po
game.libretro/resources/language/resource.language.fa_ir/: strings.po
game.libretro/resources/language/resource.language.fi_fi/: strings.po
game.libretro/resources/language/resource.language.fo_fo/: strings.po
game.libretro/resources/language/resource.language.fr_ca/: strings.po
game.libretro/resources/language/resource.language.fr_fr/: strings.po
game.libretro/resources/language/resource.language.gl_es/: strings.po
game.libretro/resources/language/resource.language.he_il/: strings.po
game.libretro/resources/language/resource.language.hi_in/: strings.po
game.libretro/resources/language/resource.language.hr_hr/: strings.po
game.libretro/resources/language/resource.language.hu_hu/: strings.po
game.libretro/resources/language/resource.language.hy_am/: strings.po
game.libretro/resources/language/resource.language.id_id/: strings.po
game.libretro/resources/language/resource.language.is_is/: strings.po
game.libretro/resources/language/resource.language.it_it/: strings.po
game.libretro/resources/language/resource.language.ja_jp/: strings.po
game.libretro/resources/language/resource.language.kl_gl/: strings.po
game.libretro/resources/language/resource.language.kn_in/: strings.po
game.libretro/resources/language/resource.language.ko_kr/: strings.po
game.libretro/resources/language/resource.language.lt_lt/: strings.po
game.libretro/resources/language/resource.language.lv_lv/: strings.po
game.libretro/resources/language/resource.language.mi/: strings.po
src/: ClientBridge.cpp  ClientBridge.h  FrontendBridge.cpp  FrontendBridge.h  GameInfoLoader.cpp  GameInfoLoader.h  GameLoop.cpp  GameLoop.h  InputManager.cpp  InputManager.h  LibretroDLL.cpp  LibretroDLL.h  LibretroDefinitions.h  LibretroEnvironment.cpp  LibretroEnvironment.h  LibretroTranslator.cpp  LibretroTranslator.h  Settings.cpp  Settings.h  client.cpp  client.h
src/audio/: AudioStream.cpp  AudioStream.h  SingleFrameAudio.cpp  SingleFrameAudio.h
src/cheevos/: Cheevos.cpp  Cheevos.h  CheevosEnvironment.cpp  CheevosEnvironment.h  CheevosFrontendBridge.cpp  CheevosFrontendBridge.h
src/input/: ButtonMapper.cpp  ButtonMapper.h  ControllerLayout.cpp  ControllerLayout.h  ControllerTopology.cpp  ControllerTopology.h  DefaultControllerDefines.h  DefaultControllerTranslator.cpp  DefaultControllerTranslator.h  DefaultKeyboardDefines.h  DefaultKeyboardTranslator.cpp  DefaultKeyboardTranslator.h  InputDefinitions.h  InputManager.cpp  InputManager.h  InputTranslator.cpp  InputTranslator.h  InputTypes.h  LibretroDevice.cpp  LibretroDevice.h  LibretroDeviceInput.cpp  LibretroDeviceInput.h
src/libretro/: ClientBridge.cpp  ClientBridge.h  FrontendBridge.cpp  FrontendBridge.h  LibretroDLL.cpp  LibretroDLL.h  LibretroDefines.h  LibretroEnvironment.cpp  LibretroEnvironment.h  LibretroResources.cpp  LibretroResources.h  LibretroSetting.cpp  LibretroSettings.cpp  LibretroSettings.h  LibretroTranslator.cpp  LibretroTranslator.h  MemoryMap.cpp  MemoryMap.h  libretro.h
src/log/: ILog.h  Log.cpp  Log.h  LogAddon.cpp  LogAddon.h  LogConsole.cpp  LogConsole.h
src/settings/: LanguageGenerator.cpp  LanguageGenerator.h  LibretroSetting.cpp  LibretroSetting.h  LibretroSettings.cpp  LibretroSettings.h  Settings.cpp  Settings.h  SettingsGenerator.cpp  SettingsGenerator.h  SettingsTypes.h
src/utils/: PathUtils.cpp  PathUtils.h  Timer.cpp  Timer.h
src/video/: VideoGeometry.cpp  VideoGeometry.h  VideoStream.cpp  VideoStream.h
(+36 files in other folders)
